--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="white">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,6 +12,12 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
       rel="stylesheet"
     />
+
+    <!-- fontawesome CDN -->
+    <script
+      src="https://kit.fontawesome.com/744ff9fedc.js"
+      crossorigin="anonymous"
+    ></script>
 
     <!-- DaisyUi and tailwind CDN -->
 
@@ -29,19 +35,103 @@
           extend: {
             colors: {
               clifford: "#da373d",
+              parrot: "#ABEF5F",
+              gray: "#A0A0A0",
             },
             fontFamily: {
               primary: ["Manrope", "sans-serif"],
+            },
+            background: {
+              "gradient-ofwhite":
+                "linear-gradient(0.00deg, rgb(255, 255, 255), rgba(255, 255, 255, 0) 100%)",
             },
           },
         },
       };
     </script>
+
+    <style>
+      .bg-offwhite {
+        background: linear-gradient(
+          0deg,
+          rgb(255, 255, 255),
+          rgba(255, 255, 255, 0) 100%
+        );
+      }
+    </style>
   </head>
   <body class="font-primary">
     <!-- header section starts here -->
     <header>
-      <h1>header section will be here.</h1>
+      <!-- navbar section starts here -->
+      <div class="navbar w-11/12 mx-auto">
+        <div class="navbar-start">
+          <div class="dropdown">
+            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-5 w-5"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M4 6h16M4 12h8m-8 6h16"
+                />
+              </svg>
+            </div>
+            <ul
+              tabindex="0"
+              class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow"
+            >
+              <li><a class="font-bold">Home</a></li>
+              <li><a class="text-gray">Services</a></li>
+              <li><a class="text-gray">Porfolio</a></li>
+              <li><a class="text-gray">Blogs</a></li>
+              <li><a class="text-gray">Contact Us</a></li>
+            </ul>
+          </div>
+          <a class="btn btn-ghost text-3xl font-bold"
+            ><i
+              class="fa-solid fa-arrow-right w-8 h-8 bg-parrot text-center rounded-full -rotate-45"
+            ></i>
+            Rinterio</a
+          >
+        </div>
+        <div class="navbar-center hidden lg:flex">
+          <ul class="menu menu-horizontal px-1">
+            <li><a class="font-bold">Home</a></li>
+            <li><a class="text-gray">Services</a></li>
+            <li><a class="text-gray">Porfolio</a></li>
+            <li><a class="text-gray">Blogs</a></li>
+            <li><a class="text-gray">Contact Us</a></li>
+          </ul>
+        </div>
+        <div class="navbar-end">
+          <div
+            class="w-12 h-12 border border-black rounded-full flex justify-center items-center"
+          >
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
+          <div
+            class="w-12 h-12 border mx-2 border-black rounded-full flex justify-center items-center"
+          >
+            <i class="fa-solid fa-cart-shopping"></i>
+          </div>
+
+          <a class="btn bg-parrot"
+            >Book Consult
+            <i
+              class="fa-solid fa-arrow-right p-1 bg-black text-white text-center rounded-full -rotate-45"
+            ></i
+          ></a>
+        </div>
+      </div>
+
+      <!-- navbar section ends here -->
     </header>
     <!-- header section ends here -->
     <!-- main section starts here -->
