--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <!-- header section starts here -->
     <header>
       <!-- navbar section starts here -->
+      <!-- TODO: responsiveness is not done -->
       <div class="navbar w-11/12 mx-auto">
         <div class="navbar-start">
           <div class="dropdown">
@@ -130,8 +131,30 @@
           ></a>
         </div>
       </div>
-
       <!-- navbar section ends here -->
+
+      <!-- Bannar section starts here -->
+      <div class="flex flex-col items-center my-10 space-y-4">
+        <div>
+          <img src="./assets/banner.png" alt="" />
+        </div>
+        <h1 class="text-6xl font-extrabold text-center text-[#212121]">
+          A barn house of this design has a <br />
+          striking appearance
+        </h1>
+        <p class="text-[#494949] text-center">
+          The barn house captivates with its blend of rustic charm and modern
+          sophistication, featuring weathered wood, sleek metal <br />
+          accents, and large windows that flood the space with natural light.
+        </p>
+        <a class="btn bg-[#ABEF5F80] rounded-3xl"
+          >Book Consult
+          <i
+            class="fa-solid fa-arrow-right p-1 bg-parrot text-center rounded-full -rotate-45"
+          ></i
+        ></a>
+      </div>
+      <!-- Bannar section ends here -->
     </header>
     <!-- header section ends here -->
     <!-- main section starts here -->
