--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             colors: {
               clifford: "#da373d",
               parrot: "#ABEF5F",
-              gray: "#A0A0A0",
+              graycolor: "#A0A0A0",
             },
             fontFamily: {
               primary: ["Manrope", "sans-serif"],
@@ -60,7 +60,7 @@
       }
     </style>
   </head>
-  <body class="font-primary">
+  <body class="font-primary bg-offwhite">
     <!-- header section starts here -->
     <header>
       <!-- navbar section starts here -->
@@ -157,8 +157,59 @@
       <!-- Bannar section ends here -->
     </header>
     <!-- header section ends here -->
+
     <!-- main section starts here -->
-    <main></main>
+    <main>
+      <!-- About section starts here -->
+      <div class="bg-[#F4F4F4]">
+        <div class="w-11/12 mx-auto p-5">
+          <div>
+            <img src="./assets/Vector.png" alt="" />
+          </div>
+          <div class="md:w-11/12 md:mx-auto md:flex justify-between">
+            <div class="text-center md:text-left">
+              <button class="btn bg-white">
+                <i class="fa-solid fa-arrow-right"></i> about
+              </button>
+              <h1 class="text-4xl font-extrabold my-2">
+                We design thoughtful, <br />liveable spaces
+              </h1>
+              <p class="text-[#494949] mb-2">
+                The barn house captivates with its blend of rustic charm and
+                <br />
+                modern sophistication, featuring weathered wood, sleek metal
+                accents.
+              </p>
+              <div class="flex items-center gap-4 bg-white p-2 rounded-lg">
+                <img src="./assets/commercial.png" alt="" />
+                <div>
+                  <h3 class="text-xl font-bold">Commercial</h3>
+                  <p class="text-[#737373]">
+                    The barn house captivates with its blend of rustic charm and
+                    modern.
+                  </p>
+                </div>
+              </div>
+              <div class="flex items-center gap-4 bg-white p-2 mt-3 rounded-lg">
+                <img src="./assets/residential.png" alt="" />
+                <div>
+                  <h3 class="text-xl font-bold">Commercial</h3>
+                  <p class="text-[#737373]">
+                    The barn house captivates with its blend of rustic charm and
+                    modern.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="mt-4 md:w-[573px] md:h-96">
+              <img class="w-full h-full" src="./assets/Rectangle.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- About section ends here -->
+    </main>
     <!-- main section ends here -->
 
     <!-- footer section starts here -->
