work process section is completed with mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -209,6 +209,61 @@
       </div>
 
       <!-- About section ends here -->
+
+      <!-- TODO: Extra section will be here -->
+
+      <!-- Work process section starts here -->
+      <div class="bg-[#F4F4F4] pb-8">
+        <div class="w-10/12 mx-auto space-y-4">
+          <div class="text-center pt-4">
+            <button class="btn bg-white text-[#494949] font-bold">
+              <i class="fa-solid fa-arrow-right"></i> How We Works
+            </button>
+            <h1 class="text-[2.5rem] font-extrabold">Our Works Process</h1>
+            <p class="text-[#494949]">
+              The barn house captivates with its blend of rustic charm and
+              modern sophistication, <br />
+              featuring weathered wood, sleek metal accents.
+            </p>
+          </div>
+
+          <div class="grid gap-4 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+            <div class="bg-[#E7C1D3] p-4 rounded-md">
+              <img src="./assets/concept.png" alt="" />
+              <h1 class="text-[1.25rem] font-bold">Concept</h1>
+              <p>
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+            <div class="bg-[#EFDA6E] p-4 rounded-md">
+              <img src="./assets/flow-chart.png" alt="" />
+              <h1 class="text-[1.25rem] font-bold">Concept</h1>
+              <p>
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+            <div class="bg-[#A4DAC3] p-4 rounded-md">
+              <img src="./assets/vision.png" alt="" />
+              <h1 class="text-[1.25rem] font-bold">Concept</h1>
+              <p>
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+            <div class="bg-[#77AAEA] p-4 rounded-md">
+              <img src="./assets/budget-planning.png p-4 rounded-md" alt="" />
+              <h1 class="text-[1.25rem] font-bold">Concept</h1>
+              <p>
+                The barn house captivates with its blend of rustic charm and
+                modern.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Work process section ends here -->
     </main>
     <!-- main section ends here -->
 
