--- a/index.html
+++ b/index.html
@@ -264,6 +264,95 @@
         </div>
       </div>
       <!-- Work process section ends here -->
+
+      <!-- Portfolio section starts here -->
+      <div class="mt-12">
+        <div class="w-10/12 mx-auto space-y-4 mb-4">
+          <div class="text-center pt-4">
+            <button class="btn bg-[#ABEF5F33] text-[#494949] font-bold">
+              <i class="fa-solid fa-arrow-right"></i> Explore our Latest Works
+            </button>
+            <h1 class="text-[2.5rem] font-extrabold">Our Works Process</h1>
+            <p class="text-[#494949]">
+              The barn house captivates with its blend of rustic charm and
+              modern sophistication, <br />
+              featuring weathered wood, sleek metal accents.
+            </p>
+          </div>
+
+          <div class="md:grid grid-cols-4 gap-3">
+            <div
+              class="border border-gray-300 p-4 rounded-lg mb-2 md:flex items-center gap-4 md:col-span-3"
+            >
+              <img
+                class="w-full mb-2 md:w-auto"
+                src="./assets/img1.png"
+                alt=""
+              />
+              <div class="space-y-6">
+                <h3 class="text-2xl font-extrabold">Commercial</h3>
+                <p class="text-[#737373]">
+                  The barn house captivates with its blend of rustic charm
+                  <br />
+                  and modern. The barn house captivates with its blend of <br />
+                  rustic charm and modern .
+                </p>
+
+                <div>
+                  <a class="font-extrabold" href="$">View details </a>
+                  <i
+                    class="fa-solid fa-arrow-right bg-parrot p-1 rounded-full -rotate-45"
+                  ></i>
+                </div>
+              </div>
+            </div>
+            <div class="border border-gray-300 p-4 rounded-lg">
+              <img
+                class="w-full md:h-full md:object-cover rounded-md"
+                src="./assets/img2.png"
+                alt=""
+              />
+            </div>
+            <div class="border border-gray-300 p-4 rounded-lg mb-2">
+              <img
+                class="w-full md:object-contain"
+                src="./assets/img3.png"
+                alt=""
+              />
+            </div>
+            <div
+              class="border border-gray-300 p-4 rounded-lg mb-2 md:flex items-center gap-4 md:col-span-2"
+            >
+              <img class="w-full md:w-auto" src="./assets/img4.png" alt="" />
+              <div class="space-y-6">
+                <h3 class="font-extrabold">Commercial</h3>
+                <p class="text-[#737373]">
+                  The barn house captivates with its blend of rustic charm
+                  <br />
+                  and modern. The barn house captivates with its blend of rustic
+                  charm and modern .
+                </p>
+
+                <div>
+                  <a class="font-extrabold" href="$">View details </a>
+                  <i
+                    class="fa-solid fa-arrow-right bg-parrot p-1 rounded-full -rotate-45"
+                  ></i>
+                </div>
+              </div>
+            </div>
+            <div class="border border-gray-300 p-4 rounded-lg">
+              <img
+                class="w-full md:object-contain"
+                src="./assets/img5.png"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Portfolio section ends here -->
     </main>
     <!-- main section ends here -->
 
