article section is completed without responsiveness

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
               "gradient-ofwhite":
                 "linear-gradient(0.00deg, rgb(255, 255, 255), rgba(255, 255, 255, 0) 100%)",
             },
+            backgroundImage: {
+              whitebackgroundImage: "url(./assets/bg.jpg)",
+            },
           },
         },
       };
@@ -353,6 +356,117 @@
       </div>
 
       <!-- Portfolio section ends here -->
+
+      <!-- Articles section starts here -->
+
+      <div class="bg-gray-200">
+        <div class="w-10/12 mx-auto">
+          <div class="text-center py-6">
+            <button class="btn bg-[#ABEF5F33] text-[#494949] font-bold">
+              <i class="fa-solid fa-arrow-right"></i> Rinterio News
+            </button>
+            <h1 class="text-[2.5rem] font-extrabold">
+              Read Our Articles and News
+            </h1>
+            <p class="text-[#494949]">
+              The barn house captivates with its blend of rustic charm and
+              modern sophistication, <br />
+              featuring weathered wood, sleek metal accents.
+            </p>
+          </div>
+
+          <div class="pb-8 flex gap-4">
+            <div class="bg-white px-4 pt-4 pb-2 rounded-lg">
+              <div>
+                <img
+                  class="w-full border border-dashed"
+                  src="./assets/article1.png"
+                  alt=""
+                />
+              </div>
+              <div>
+                <p>
+                  <i class="fa-solid fa-calendar-days mr-2 text-sm"></i>
+                  <small class="font-semibold">July14,2024 </small
+                  ><i class="fa-solid fa-user-tie mx-2"></i>
+                  <span class="text-sm font-bold">By Admin</span>
+                </p>
+                <h2 class="font-extrabold">
+                  How to choose the furniture right <br />
+                  of your home.
+                </h2>
+                <p>
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+                <a class="font-extrabold" href="$">View details </a>
+                <i
+                  class="fa-solid fa-arrow-right bg-parrot p-1 rounded-full -rotate-45"
+                ></i>
+              </div>
+            </div>
+            <div class="bg-white px-4 pt-4 pb-2 rounded-lg">
+              <div>
+                <img
+                  class="w-full border border-dashed"
+                  src="./assets/article2.png"
+                  alt=""
+                />
+              </div>
+              <div>
+                <p>
+                  <i class="fa-solid fa-calendar-days mr-2 text-sm"></i>
+                  <small class="font-semibold">July14,2024 </small
+                  ><i class="fa-solid fa-user-tie mx-2"></i>
+                  <span class="text-sm font-bold">By Admin</span>
+                </p>
+                <h2 class="font-extrabold">
+                  How to choose the furniture right <br />
+                  of your home.
+                </h2>
+                <p>
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+                <a class="font-extrabold" href="$">View details </a>
+                <i
+                  class="fa-solid fa-arrow-right bg-parrot p-1 rounded-full -rotate-45"
+                ></i>
+              </div>
+            </div>
+            <div class="bg-white px-4 pt-4 pb-2 rounded-lg">
+              <div>
+                <img
+                  class="w-full border border-dashed"
+                  src="./assets/article3.png"
+                  alt=""
+                />
+              </div>
+              <div>
+                <p>
+                  <i class="fa-solid fa-calendar-days mr-2 text-sm"></i>
+                  <small class="font-semibold">July14,2024 </small
+                  ><i class="fa-solid fa-user-tie mx-2"></i>
+                  <span class="text-sm font-bold">By Admin</span>
+                </p>
+                <h2 class="font-extrabold">
+                  How to choose the furniture right <br />
+                  of your home.
+                </h2>
+                <p>
+                  The barn house captivates with its blend of rustic charm and
+                  modern.
+                </p>
+                <a class="font-extrabold" href="$">View details </a>
+                <i
+                  class="fa-solid fa-arrow-right bg-parrot p-1 rounded-full -rotate-45"
+                ></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Articles section ends here -->
     </main>
     <!-- main section ends here -->
 
