fixed the responsiveness for mobile

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
             </p>
           </div>
 
-          <div class="pb-8 flex gap-4">
+          <div class="pb-8 md:flex gap-4">
             <div class="bg-white px-4 pt-4 pb-2 rounded-lg">
               <div>
                 <img
