contact section is completed with mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
 
       <!-- Articles section starts here -->
 
-      <div class="bg-gray-200">
+      <div class="bg-gray-200 my-2">
         <div class="w-10/12 mx-auto">
           <div class="text-center py-6">
             <button class="btn bg-[#ABEF5F33] text-[#494949] font-bold">
@@ -467,6 +467,62 @@
         </div>
       </div>
       <!-- Articles section ends here -->
+      <!-- Contact section starts here -->
+      <div class="bg-whitebackgroundImage bg-no-repeat bg-cover">
+        <div class="text-center pt-10 pb-4">
+          <button class="btn bg-[#ABEF5F33] text-[#494949] font-bold">
+            <i class="fa-solid fa-arrow-right"></i> Let's Connect
+          </button>
+          <h1 class="text-[2.5rem] font-extrabold">
+            Let’s Discuss Next Project
+          </h1>
+          <p class="text-[#494949]">
+            The barn house captivates with its blend of rustic charm and modern
+            sophistication, <br />
+            featuring weathered wood, sleek metal accents.
+          </p>
+        </div>
+        <div
+          class="w-11/12 md:w-3/6 mx-auto space-y-4 md:space-y-0 md:grid grid-cols-2 gap-4"
+        >
+          <input
+            class="p-2 rounded-xl w-full"
+            type="text"
+            placeholder="Last Name*"
+          />
+          <input
+            class="p-2 rounded-xl w-full"
+            type="text"
+            placeholder="First Name*"
+          />
+          <input
+            class="p-2 rounded-xl w-full"
+            type="text"
+            placeholder="Phone Number*"
+          />
+          <input
+            class="p-2 rounded-xl w-full"
+            type="text"
+            placeholder="Email Address*"
+          />
+          <textarea
+            class="col-span-2 p-4 rounded-xl w-full"
+            name=""
+            id=""
+            rows="7"
+            placeholder="Write your message here"
+          ></textarea>
+          <button
+            class="btn bg-[#ABEF5F] text-[#494949] font-bold w-full col-span-2"
+          >
+            send Mail
+            <i
+              class="fa-solid fa-arrow-right bg-black text-white p-1 rounded-full -rotate-45"
+            ></i>
+          </button>
+        </div>
+      </div>
+      <!-- Contact section ends here -->
     </main>
     <!-- main section ends here -->
 
