footer section is completed with mobile devices responsiveness

--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
           </p>
         </div>
         <div
-          class="w-11/12 md:w-3/6 mx-auto space-y-4 md:space-y-0 md:grid grid-cols-2 gap-4"
+          class="w-11/12 pb-8 md:w-3/6 mx-auto space-y-4 md:space-y-0 md:grid grid-cols-2 gap-4"
         >
           <input
             class="p-2 rounded-xl w-full"
@@ -527,7 +527,39 @@
     <!-- main section ends here -->
 
     <!-- footer section starts here -->
-    <footer></footer>
+    <footer class="bg-[#1C1C1C]">
+      <div class="text-center pt-8 w-11/12 md:w-5/12 mx-auto space-y-4">
+        <h3>
+          <i
+            class="fa-solid fa-arrow-right p-1 bg-parrot text-center rounded-full -rotate-45"
+          ></i>
+          <span class="text-white text-2xl font-extrabold">Rinterio</span>
+        </h3>
+        <p class="text-[#737373]">
+          The barn house captivates with its blend of rustic charm and modern
+          sophistication, featuring weathered wood, sleek metal accents.
+        </p>
+      </div>
+      <div class="w-5/12 mx-auto">
+        <ul
+          class="text-[#E9E9E9] space-y-2 flex flex-col md:flex-row pt-2 justify-between items-center"
+        >
+          <li>Home</li>
+          <li>Services</li>
+          <li>Portfoliio</li>
+          <li>Blogs</li>
+          <li>Contacts</li>
+        </ul>
+      </div>
+      <div class="text-center mt-6 pb-8">
+        <button class="btn bg-[#ABEF5F] px-16 md:px-4 text-[#494949] font-bold">
+          Book Consult
+          <i
+            class="fa-solid fa-arrow-right bg-black text-white p-1 rounded-full -rotate-45"
+          ></i>
+        </button>
+      </div>
+    </footer>
     <!-- footer section ends here -->
   </body>
 </html>
