--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <li><a class="text-gray">Contact Us</a></li>
           </ul>
         </div>
-        <div class="navbar-end">
+        <div class="navbar-end hidden md:inline-flex">
           <div
             class="w-12 h-12 border border-black rounded-full flex justify-center items-center"
           >
