fixed the vector image's visibility for different devices

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <!-- About section starts here -->
       <div class="bg-[#F4F4F4]">
         <div class="w-11/12 mx-auto p-5">
-          <div>
+          <div class="hidden md:inline-block">
             <img src="./assets/Vector.png" alt="" />
           </div>
           <div class="md:w-11/12 md:mx-auto md:flex justify-between">
