--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
           </div>
           <div class="md:w-11/12 md:mx-auto md:flex justify-between">
             <div class="text-center md:text-left">
-              <button class="btn bg-white">
+              <button class="btn bg-white text-[#212121]">
                 <i class="fa-solid fa-arrow-right"></i> about
               </button>
-              <h1 class="text-4xl font-extrabold my-2">
+              <h1 class="text-4xl font-extrabold my-2 text-[#212121]">
                 We design thoughtful, <br />liveable spaces
               </h1>
               <p class="text-[#494949] mb-2">
@@ -176,7 +176,7 @@
               <div class="flex items-center gap-4 bg-white p-2 rounded-lg">
                 <img src="./assets/commercial.png" alt="" />
                 <div>
-                  <h3 class="text-xl font-bold">Commercial</h3>
+                  <h3 class="text-xl font-bold text-[#212121]">Commercial</h3>
                   <p class="text-[#737373]">
                     The barn house captivates with its blend of rustic charm and
                     modern.
@@ -186,7 +186,7 @@
               <div class="flex items-center gap-4 bg-white p-2 mt-3 rounded-lg">
                 <img src="./assets/residential.png" alt="" />
                 <div>
-                  <h3 class="text-xl font-bold">Commercial</h3>
+                  <h3 class="text-xl font-bold text-[#212121]">Commercial</h3>
                   <p class="text-[#737373]">
                     The barn house captivates with its blend of rustic charm and
                     modern.
@@ -212,7 +212,9 @@
             <button class="btn bg-white text-[#494949] font-bold">
               <i class="fa-solid fa-arrow-right"></i> How We Works
             </button>
-            <h1 class="text-[2.5rem] font-extrabold">Our Works Process</h1>
+            <h1 class="text-[2.5rem] font-extrabold text-[#212121]">
+              Our Works Process
+            </h1>
             <p class="text-[#494949]">
               The barn house captivates with its blend of rustic charm and
               modern sophistication, <br />
@@ -223,32 +225,34 @@
           <div class="grid gap-4 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
             <div class="bg-[#E7C1D3] p-4 rounded-md">
               <img src="./assets/concept.png" alt="" />
-              <h1 class="text-[1.25rem] font-bold">Concept</h1>
-              <p>
+              <h1 class="text-[1.25rem] font-bold text-[#212121]">Concept</h1>
+              <p class="text-[#494949]">
                 The barn house captivates with its blend of rustic charm and
                 modern.
               </p>
             </div>
             <div class="bg-[#EFDA6E] p-4 rounded-md">
               <img src="./assets/flow-chart.png" alt="" />
-              <h1 class="text-[1.25rem] font-bold">Concept</h1>
-              <p>
+              <h1 class="text-[1.25rem] font-bold text-[#212121]">Concept</h1>
+              <p class="text-[#494949]">
                 The barn house captivates with its blend of rustic charm and
                 modern.
               </p>
             </div>
             <div class="bg-[#A4DAC3] p-4 rounded-md">
               <img src="./assets/vision.png" alt="" />
-              <h1 class="text-[1.25rem] font-bold">Concept</h1>
-              <p>
+              <h1 class="text-[1.25rem] font-bold text-[#212121]">Concept</h1>
+              <p class="text-[#494949]">
                 The barn house captivates with its blend of rustic charm and
                 modern.
               </p>
             </div>
             <div class="bg-[#77AAEA] p-4 rounded-md">
-              <img src="./assets/budget-planning.png p-4 rounded-md" alt="" />
-              <h1 class="text-[1.25rem] font-bold">Concept</h1>
-              <p>
+              <img src="./assets/budget-planning.png" alt="" />
+              <h1 class="text-[1.25rem] font-bold text-[#212121]">
+                Budget Planning
+              </h1>
+              <p class="text-[#494949]">
                 The barn house captivates with its blend of rustic charm and
                 modern.
               </p>
@@ -265,7 +269,9 @@
             <button class="btn bg-[#ABEF5F33] text-[#494949] font-bold">
               <i class="fa-solid fa-arrow-right"></i> Explore our Latest Works
             </button>
-            <h1 class="text-[2.5rem] font-extrabold">Our Works Process</h1>
+            <h1 class="text-[2.5rem] font-extrabold text-[#212121]">
+              Our Works Process
+            </h1>
             <p class="text-[#494949]">
               The barn house captivates with its blend of rustic charm and
               modern sophistication, <br />
@@ -283,8 +289,10 @@
                 alt=""
               />
               <div class="space-y-6">
-                <h3 class="text-2xl font-extrabold">Commercial</h3>
-                <p class="text-[#737373]">
+                <h3 class="text-2xl font-extrabold text-[#212121]">
+                  Commercial
+                </h3>
+                <p class="text-[#494949]">
                   The barn house captivates with its blend of rustic charm
                   <br />
                   and modern. The barn house captivates with its blend of <br />
@@ -292,7 +300,9 @@
                 </p>
 
                 <div>
-                  <a class="font-extrabold" href="$">View details </a>
+                  <a class="font-extrabold text-[#212121]" href="$"
+                    >View details
+                  </a>
                   <i
                     class="fa-solid fa-arrow-right bg-parrot p-1 rounded-full -rotate-45"
                   ></i>
@@ -318,7 +328,7 @@
             >
               <img class="w-full md:w-auto" src="./assets/img4.png" alt="" />
               <div class="space-y-6">
-                <h3 class="font-extrabold">Commercial</h3>
+                <h3 class="font-extrabold text-[#212121]">Commercial</h3>
                 <p class="text-[#737373]">
                   The barn house captivates with its blend of rustic charm
                   <br />
@@ -327,7 +337,9 @@
                 </p>
 
                 <div>
-                  <a class="font-extrabold" href="$">View details </a>
+                  <a class="font-extrabold text-[#212121]" href="$"
+                    >View details
+                  </a>
                   <i
                     class="fa-solid fa-arrow-right bg-parrot p-1 rounded-full -rotate-45"
                   ></i>
@@ -355,7 +367,7 @@
             <button class="btn bg-[#ABEF5F33] text-[#494949] font-bold">
               <i class="fa-solid fa-arrow-right"></i> Rinterio News
             </button>
-            <h1 class="text-[2.5rem] font-extrabold">
+            <h1 class="text-[2.5rem] font-extrabold text-[#212121]">
               Read Our Articles and News
             </h1>
             <p class="text-[#494949]">
@@ -374,7 +386,7 @@
                   alt=""
                 />
               </div>
-              <div>
+              <div class="text-[#212121]">
                 <p>
                   <i class="fa-solid fa-calendar-days mr-2 text-sm"></i>
                   <small class="font-semibold">July14,2024 </small
@@ -403,7 +415,7 @@
                   alt=""
                 />
               </div>
-              <div>
+              <div class="text-[#212121]">
                 <p>
                   <i class="fa-solid fa-calendar-days mr-2 text-sm"></i>
                   <small class="font-semibold">July14,2024 </small
@@ -432,7 +444,7 @@
                   alt=""
                 />
               </div>
-              <div>
+              <div class="text-[#212121]">
                 <p>
                   <i class="fa-solid fa-calendar-days mr-2 text-sm"></i>
                   <small class="font-semibold">July14,2024 </small
@@ -463,7 +475,7 @@
           <button class="btn bg-[#ABEF5F33] text-[#494949] font-bold">
             <i class="fa-solid fa-arrow-right"></i> Let's Connect
           </button>
-          <h1 class="text-[2.5rem] font-extrabold">
+          <h1 class="text-[2.5rem] font-extrabold text-[#212121]">
             Let’s Discuss Next Project
           </h1>
           <p class="text-[#494949]">
