I did faq as a challenge part

--- a/index.html
+++ b/index.html
@@ -203,8 +203,6 @@
 
       <!-- About section ends here -->
 
-      <!-- TODO: Extra section will be here -->
-
       <!-- Work process section starts here -->
       <div class="bg-[#F4F4F4] pb-8">
         <div class="w-10/12 mx-auto space-y-4">
@@ -525,6 +523,52 @@
         </div>
       </div>
       <!-- Contact section ends here -->
+
+      <!-- Faq Section starts here -->
+      <div class="bg-gray-300 p-4">
+        <div class="text-center pt-10 pb-4">
+          <h1 class="text-[2.5rem] font-extrabold text-[#212121]">
+            People ask Frequently to us
+          </h1>
+        </div>
+
+        <div class="w-10/12 mx-auto flex justify-between gap-8">
+          <img class="" src="./assets/img1.png" alt="" />
+          <div class="flex-1 space-y-4">
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-medium">
+                How I can Contact with you?
+              </div>
+              <div class="collapse-content">
+                <p>
+                  You can contact us in verious ways like, phone call, email and
+                  in person.
+                </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                Do you charge for taking appointment?
+              </div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">
+                Your Location?
+              </div>
+              <div class="collapse-content">
+                <p>hello</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Faq Section ends here -->
     </main>
     <!-- main section ends here -->
 
