--- a/index.html
+++ b/index.html
@@ -532,10 +532,14 @@
           </h1>
         </div>
 
-        <div class="w-10/12 mx-auto flex justify-between gap-8">
-          <img class="" src="./assets/img1.png" alt="" />
+        <div
+          class="w-10/12 mx-auto flex flex-col md:flex-row justify-between gap-8"
+        >
+          <div>
+            <img class="w-full md:w-auto" src="./assets/img1.png" alt="" />
+          </div>
           <div class="flex-1 space-y-4">
-            <div class="collapse collapse-plus bg-base-200">
+            <div class="collapse collapse-plus bg-gray-200">
               <input type="radio" name="my-accordion-3" checked="checked" />
               <div class="collapse-title text-xl font-medium">
                 How I can Contact with you?
@@ -547,7 +551,7 @@
                 </p>
               </div>
             </div>
-            <div class="collapse collapse-plus bg-base-200">
+            <div class="collapse collapse-plus bg-gray-200">
               <input type="radio" name="my-accordion-3" />
               <div class="collapse-title text-xl font-medium">
                 Do you charge for taking appointment?
@@ -556,7 +560,7 @@
                 <p>hello</p>
               </div>
             </div>
-            <div class="collapse collapse-plus bg-base-200">
+            <div class="collapse collapse-plus bg-gray-200">
               <input type="radio" name="my-accordion-3" />
               <div class="collapse-title text-xl font-medium">
                 Your Location?
