added one of picture in the portfolio section

--- a/index.html
+++ b/index.html
@@ -344,6 +344,13 @@
                 </div>
               </div>
             </div>
+            <div class="border border-gray-300 p-4 rounded-lg md:hidden">
+              <img
+                class="w-full md:object-contain"
+                src="./assets/img3.png"
+                alt=""
+              />
+            </div>
             <div class="border border-gray-300 p-4 rounded-lg">
               <img
                 class="w-full md:object-contain"
