--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <div class="navbar w-11/12 mx-auto">
         <div class="navbar-start">
-          <a class="btn btn-ghost text-3xl font-bold"
+          <a class="btn btn-ghost text-3xl font-bold text-[#212121]"
             ><i
               class="fa-solid fa-arrow-right w-8 h-8 bg-parrot text-center rounded-full -rotate-45"
             ></i>
@@ -80,15 +80,15 @@
           <div
             class="w-12 h-12 bg-white rounded-full flex justify-center items-center"
           >
-            <i class="fa-solid fa-magnifying-glass"></i>
+            <i class="fa-solid fa-magnifying-glass text-[#212121]"></i>
           </div>
           <div
             class="w-12 h-12 mx-2 bg-white rounded-full flex justify-center items-center"
           >
-            <i class="fa-solid fa-cart-shopping"></i>
+            <i class="fa-solid fa-cart-shopping text-[#212121]"></i>
           </div>
 
-          <a class="btn bg-parrot"
+          <a class="btn bg-parrot text-[#212121]"
             >Book Consult
             <i
               class="fa-solid fa-arrow-right p-1 bg-black text-white text-center rounded-full -rotate-45"
